[FIX] removed overflow from logo

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -17,7 +17,6 @@
     & > .nav--logo {
       border-radius: 50rem;
       background-color: #{$main-bg};
-      overflow: hidden;
       width: 4rem;
     }
 
